Fix list text and marker alignment

--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -18,6 +18,8 @@
 
     a {
       color: #26262a;
+      position: relative;
+      bottom: 3px;
     }
 
     &::marker {
